# glfw-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  glfw_template.rdi  imgui.ini
resources/objects/backpack/: backpack_2.mtl
src/: application.cpp  application.h  build_imgui_backends.cpp  engine_lib.h  imgui_setup.cpp  imgui_setup.h  input.h  main.cpp  render_interface.h  vulkan_backend.cpp  vulkan_backend.h  vulkan_setup.cpp  vulkan_setup.h
src/Shaders/: build.bat  triangle.frag  triangle.vert
